--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
       <label><input type="text" id="value2" /></label>
       <button id="btn" type="button">Add</button>
     </form>
-    <link rel="stylesheet" href="./app.js" />
+    <script src="./src/app.js"></script>
+    <script src="./src/btn.js"></script>
   </body>
 </html>
